agrege biblioggraficas a referncias

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body{background: lightslategrey;}
 
 <div class="Referncias">
 
-	<h4>Referencias:</h4>
+	<h4>Referencias Bibliograficas:</h4>
 
 </div>
 	<a href="https://unesdoc.unesco.org/ark:/48223/pf0000117740_spa">https://unesdoc.unesco.org/ark:/48223/pf0000117740_spa</a>
