agrege la palabra del texto en sintesis

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body{background: lightslategrey;}
 
 <div class="titulo">
 <center>
-			<h2>Sintesis</h2>
+			<h2>Sintesis del texto</h2>
 
 </center>	
 			</div>
@@ -87,7 +87,7 @@ body{background: lightslategrey;}
 
 <div class="Referncias">
 
-	<h4>Referencias Bibliograficas:</h4>
+	<h4>Referencias bibliograficas:</h4>
 
 </div>
 	<a href="https://unesdoc.unesco.org/ark:/48223/pf0000117740_spa">https://unesdoc.unesco.org/ark:/48223/pf0000117740_spa</a>
